--- a/config/database.yml
+++ b/config/database.yml
@@ -18,6 +18,13 @@ default: &default
   # For details on connection pooling, see Rails configuration guide
   # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+production:
+  adapter: postgresql
+  encoding: unicode
+  database: myapp_production
+  username: postgres
+  password: postgres
+  host: db
 
 
 development:
