--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,7 @@ services:
     image: postgres:14
     environment:
       POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: password
-      POSTGRES_DB: myapp_production
+      POSTGRES_PASSWORD: postgres
     volumes:
       - db_data:/var/lib/postgresql/data
     ports:
@@ -17,10 +16,10 @@ services:
       - .env
     command: bundle exec rails server -b 0.0.0.0
     environment:
-      SECRET_KEY_BASE: secret_key_base
+      RAILS_ENV: development
       DATABASE_HOST: db
       DATABASE_USERNAME: postgres
-      DATABASE_PASSWORD: password
+      DATABASE_PASSWORD: postgres
       DATABASE_NAME: myapp_production
     volumes:
       - .:/myapp
