--- a/config/database.yml
+++ b/config/database.yml
@@ -26,17 +26,17 @@ default: &default
 
 development:
   <<: *default
-  database: Kotatsumuri
+  database: postgres
   password: postgres
   username: postgres
   
 test:
   <<: *default
-  database: Kotatsumuri
+  database: postgres
 
 # Production environment settings.
 production:
   <<: *default
-  database: Kotatsumuri
-  username: Kotatsumuri
+  database: postgres
+  username: postgres
   password: <%= ENV["KOTATSUMURI_DATABASE_PASSWORD"] %>
