--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3.9"
+
 services:
   db:
     image: postgres:14
@@ -27,6 +27,7 @@ services:
       - "3000:3000"
     depends_on:
       - db
+    user: "0:0"
 
 volumes:
   db_data:
