--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,12 +10,20 @@ services:
     ports:
       - "15432:5432"
 
+  redis:
+    image: redis:latest
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis_data:/data
+
   web:
     build: .
     env_file:
       - .env
     command: bundle exec rails server -b 0.0.0.0
     environment:
+      REDIS_URL: redis://redis:6379/1
       RAILS_ENV: development
       DATABASE_HOST: db
       DATABASE_USERNAME: postgres
@@ -31,3 +39,4 @@ services:
 
 volumes:
   db_data:
+  redis_data:
