--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,7 @@ services:
     command: bundle exec rails server -b 0.0.0.0
     environment:
       REDIS_URL: redis://redis:6379/1
-      RAILS_ENV: development
+      RAILS_ENV: production
       DATABASE_HOST: db
       DATABASE_USERNAME: postgres
       DATABASE_PASSWORD: postgres
