--- a/config/storage.yml
+++ b/config/storage.yml
@@ -15,11 +15,12 @@ local:
 #   bucket: your_own_bucket-<%= Rails.env %>
 
 # Remember not to checkin your GCS keyfile to a repository
-# google:
-#   service: GCS
-#   project: your_project
-#   credentials: <%= Rails.root.join("path/to/gcs.keyfile") %>
-#   bucket: your_own_bucket-<%= Rails.env %>
+google:
+  service: GCS
+  project: kotatsumuri
+  credentials: <%= Rails.root.join("config/gcs-keyfile.json") %>
+  bucket: kotatsumuri-1
+  public: true
 
 # Use bin/rails credentials:edit to set the Azure Storage secret (as azure_storage:storage_access_key)
 # microsoft:
