--- a/test/fixtures/todos.yml
+++ b/test/fixtures/todos.yml
@@ -1,17 +1,17 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  taskname: MyString
+  task_name: MyString
   description: MyString
   timing: MyString
   priority: MyString
   status: MyString
-  duedate: MyString
+  due_date: MyString
 
 two:
-  taskname: MyString
+  task_name: MyString
   description: MyString
   timing: MyString
   priority: MyString
   status: MyString
-  duedate: MyString
+  due_date: MyString
