--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2.1
 executors:
   ruby-executor:
     docker:
-      - image: circleci/ruby:3.2.2-node
+      - image: cimg/ruby:3.2.2-node
         environment:
           BUNDLE_JOBS: 4
           BUNDLE_RETRY: 3
