--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,7 +24,7 @@ jobs:
             - gems-{{ checksum "Gemfile.lock" }}
       - run:
           name: Install dependencies
-          command: bundle install --jobs 4 --retry 3
+          command: bundle install --jobs 4 --retry 3 --path vendor/bundle
       - save_cache:
           key: gems-{{ checksum "Gemfile.lock" }}
           paths:
