--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,8 +25,7 @@ jobs:
             - gems-{{ checksum "Gemfile.lock" }}
       - run:
           name: Wait for Redis
-            command: |
-              dockerize -wait tcp://localhost:6379 -timeout 30s
+          command: dockerize -wait tcp://localhost:6379 -timeout 30s
 
       - run:
           name: Clear old gems & reinstall dependencies
