--- a/config/database.yml
+++ b/config/database.yml
@@ -18,7 +18,7 @@ default: &default
   encoding: unicode
   username: postgres
   password: postgres
-  host: db
+  host: localhost
   port: 5432
   # For details on connection pooling, see Rails configuration guide:
   # https://guides.rubyonrails.org/configuring.html#database-pooling
