--- a/config/database.yml
+++ b/config/database.yml
@@ -17,7 +17,7 @@ default: &default
   adapter: postgresql
   encoding: unicode
   username: postgres
-  password: ""
+  password: postgres
   host: localhost
   port: 5432
 
