--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,11 +27,18 @@ jobs:
           name: Wait for Redis
           command: dockerize -wait tcp://localhost:6379 -timeout 30s
 
+      # - run:
+      #     name: Clear old gems & reinstall dependencies
+      #     command: |
+      #       rm -rf Gemfile.lock
+      #       bundle install --jobs=4 --retry=3
+
       - run:
-          name: Clear old gems & reinstall dependencies
+          name: Clear old cache
           command: |
-            rm -rf Gemfile.lock
-            bundle install --jobs=4 --retry=3
+            rm -rf ~/.bundle vendor/bundle
+            bundle install --path vendor/bundle --jobs=4 --retry=3
+
       - run:
           name: Check if Rails is installed
           command: bundle list | grep rails
