--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,9 +10,9 @@ executors:
       - image: redis:7  # 🚀 Redisをサービスとして追加
       - image: circleci/postgres:latest
         environment:
-          POSTGRES_USER: $POSTGRES_USER
-          POSTGRES_DB: $POSTGRES_DB
-          POSTGRES_PASSWORD: $POSTGRES_PASSWORD
+          POSTGRES_USER: postgres
+          POSTGRES_DB: Kotatsumuri
+          POSTGRES_PASSWORD: postgres
     working_directory: ~/app
 
 jobs:
