--- a/config/database.yml
+++ b/config/database.yml
@@ -18,7 +18,7 @@ default: &default
   encoding: unicode
   username: postgres
   password: postgres
-  host: localhost
+  host: db
   port: 5432
 
   # For details on connection pooling, see Rails configuration guide:
@@ -30,12 +30,16 @@ development:
   database: <%= ENV['POSTGRES_DB'] %>
   password: <%= ENV['POSTGRES_PASSWORD'] %>
   username: <%= ENV['POSTGRES_USER'] %>
+  host: localhost
+  port: 5432
   
 test:
   <<: *default
   database: <%= ENV['POSTGRES_DB'] %>
   password: <%= ENV['POSTGRES_PASSWORD'] %>
   username: <%= ENV['POSTGRES_USER'] %>
+  host: localhost
+  port: 5432
 
 # Production environment settings.
 production:
